package{-lock}.json: prepare to use webpack to build this lib

--- a/package.json
+++ b/package.json
@@ -2,21 +2,24 @@
   "name": "germanet-common-components",
   "version": "1.0.0",
   "description": "Common React components for GermaNet-related web UIs",
-  "main": "index.js",
+  "main": "dist/germanet-common.js",
   "author": "",
   "scripts": {
-    "build:dev": "babel src --out-file index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "webpack": "^4.35.2",
+    "webpack-cli": "^3.3.5"
   },
   "peerDependencies": {
     "react": "^16.8.6",
