--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "germanet-common-components",
+  "name": "germanet-common",
   "version": "1.0.0",
   "description": "Common React components for GermaNet-related web UIs",
   "main": "dist/germanet-common.js",
@@ -13,18 +13,22 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
+    "seamless-immutable": "^7.1.4",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   },
   "peerDependencies": {
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "seamless-immutable": "^7.1.4"
   }
 }
