--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "seamless-immutable": "^7.1.4"
+  },
+  "dependencies": {
+    "classnames": "^2.2.6"
   }
 }
