--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "seamless-immutable": "^7.1.4"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "d3": "^5.11.0"
   }
 }
