--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "germanet-common",
+  "name": "@sfstuebingen/germanet-common",
+  "homepage": "http://www.sfs.uni-tuebingen.de/GermaNet/",
   "version": "1.0.0",
   "description": "Common React components for GermaNet-related web UIs",
   "main": "dist/germanet-common.js",
