package.json: add keywords, run prod. build before publishing

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "LGPL-3.0-or-later",
   "scripts": {
     "develop": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -36,5 +37,10 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "d3": "^5.11.0"
-  }
+  },
+  "keywords": [
+    "germanet",
+    "wordnet",
+    "components"
+  ]
 }
