--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "description": "Common React components for GermaNet-related web UIs",
   "author": "Richard Lawrence",
   "license": "LGPL-3.0-or-later",
+  "scripts": {
+    "build": "find . -name '*.jsx' | xargs babel --presets '@babel/react' -d '.' --relative --verbose",
+    "prePublishOnly": "npm run build"
+  },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.5",
