--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "peerDependencies": {
     "axios": "^0.19.0",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
