--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "visjs-network": "^4.24.11"
   },
   "peerDependencies": {
     "axios": "^0.19.0",
@@ -28,7 +29,8 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
-    "seamless-immutable": "^7.1.4"
+    "seamless-immutable": "^7.1.4",
+    "visjs-network": "^4.24.11"
   },
   "dependencies": {
     "classnames": "^2.2.6",
