--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
-    "seamless-immutable": "^7.1.4",
-    "visjs-network": "^4.24.11"
+    "seamless-immutable": "^7.1.4"
   },
   "peerDependencies": {
     "axios": "^0.19.0",
@@ -29,11 +28,11 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
-    "seamless-immutable": "^7.1.4",
-    "visjs-network": "^4.24.11"
+    "seamless-immutable": "^7.1.4"
   },
   "dependencies": {
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "visjs-network": "^4.24.11"
   },
   "keywords": [
     "germanet",
