--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@sfstuebingen/germanet-common",
-  "homepage": "http://www.sfs.uni-tuebingen.de/GermaNet/",
+  "name": "@sfstuebingen/react-utils",
+  "homepage": "",
   "version": "1.4.6",
-  "description": "Common React components for GermaNet-related web UIs",
+  "description": "Common React components for SfS web UIs",
   "module": "index.js",
   "author": "Richard Lawrence",
   "license": "LGPL-3.0-or-later",
@@ -13,37 +13,18 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
-    "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
+    "classnames": "^2.2.6",
     "seamless-immutable": "^7.1.4"
   },
   "peerDependencies": {
-    "axios": "^0.19.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.1",
+    "classnames": "^2.2.6",
     "seamless-immutable": "^7.1.4"
   },
-  "dependencies": {
-    "@egjs/hammerjs": "^2.0.17",
-    "classnames": "^2.2.6",
-    "keycharm": "^0.3.1",
-    "moment": "^2.25.1",
-    "timsort": "^0.3.0",
-    "uuid": "^7.0.3",
-    "vis-data": "^6.5.1",
-    "vis-network": "^7.7.0",
-    "vis-util": "^4.0.0"
-  },
+  "dependencies": {},
   "keywords": [
-    "germanet",
-    "wordnet",
-    "components"
+    "react"
   ]
 }
